fix card-description alignment

--- a/src/app/pages/content/content.component.css
+++ b/src/app/pages/content/content.component.css
@@ -22,7 +22,14 @@
 .content__description{
     margin-top: 15px;
 }
+
+.content__description > a{
+    display: flex;
+    justify-self: center;
+}
+
 .content__description > p{
     margin-top: 20px;
-   color: rgb(193, 193, 193);
+    color: rgb(193, 193, 193);
+    width: 650px;
 }
